--- a/about.html
+++ b/about.html
@@ -8,14 +8,12 @@
 			Nicole Taylor - About
 		</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- fontawesome link - icons -->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-	<!-- animated css styles -->
-		<link rel="stylesheet" href="css/animate.css">
 	<!-- Bootstrap css styles -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<!-- active css styles -->
 		<link rel="stylesheet" href="css/main.css">
+	<!-- icons -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 	<!-- fonts -->
 		<link href='https://fonts.googleapis.com/css?family=Outfit' rel='stylesheet'>
 		<link href='https://fonts.googleapis.com/css?family=Kaushan Script' rel='stylesheet'>
@@ -48,11 +46,5 @@
 			</div>
 			<div class="prompt"><i class="fa-solid fa-angle-down"></i></div>
 		</div>
-<!-- Bootstrap scripts -->
-		<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<!-- js	 -->
-		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
