--- a/about.html
+++ b/about.html
@@ -27,8 +27,8 @@
 			<div class="about-txt">
 				<h1>About Me:</h1>
 				<ul>
-					<li><a href="logos.html" target="_blank">Logos</a></li>
-					<li><a href="design.html" target="_blank">Web Design</a></li>
+					<li><a href="logos.html">Logos</a></li>
+					<li><a href="design.html">Web Design</a></li>
 				</ul>
 				<br>
 				<p>
