--- a/design.html
+++ b/design.html
@@ -22,8 +22,8 @@
 	<body>
 		<h1>Nicole's Web Projects</h1>
 		<ul>
-			<li><a href="logos.html" target="_blank">Logos</a></li>
-			<li><a href="#" target="_blank">Web Design</a></li>
+			<li><a href="logos.html">Logos</a></li>
+			<li><a href="#">Web Design</a></li>
 		</ul>
 		<div class="info">
 			<p>These are sites I've designed, and in some cases begun building.</p>
@@ -34,8 +34,8 @@
 				<h3>Colorful Flat</h3>
 				<p class="descrip">A coding project for converting a non-responsive CSS template to responsive.</p>
 				<div class="links">
-					<p><a href="https://kaidawnborn.github.io/colorfulFlatResponsive/" target="_blank">HTML/CSS - Responsive <i class="fa-solid fa-angle-right"></i></a></p><hr>
-					<p><a href="https://kaidawnborn.github.io/colorfulFlat/" target="_blank">HTML/CSS - Non-Responsive <i class="fa-solid fa-angle-right"></i></a></p>
+					<p><a href="https://kaidawnborn.github.io/colorfulFlatResponsive/">HTML/CSS - Responsive <i class="fa-solid fa-angle-right"></i></a></p><hr>
+					<p><a href="https://kaidawnborn.github.io/colorfulFlat/">HTML/CSS - Non-Responsive <i class="fa-solid fa-angle-right"></i></a></p>
 				</div>
 			</div>
 		</div>
@@ -45,8 +45,8 @@
 				<h3>Job Match</h3>
 				<p class="descrip">A design/layout project for a job search site with corporate tones.</p>
 				<div class="links">
-					<p><a href="https://www.canva.com/design/DAFO-ekZHlo/D2w3FqEqGE1U3NpO_ww3yg/view?utm_content=DAFO-ekZHlo&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Design only - Mobile <i class="fa-solid fa-angle-right"></i></a></p><hr>
-					<p><a href="https://www.canva.com/design/DAFOG_laNkA/ncHQ5GY4I2RYnAv-Npeqkg/view?utm_content=DAFOG_laNkA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Design only - Desktop <i class="fa-solid fa-angle-right"></i></a></p>
+					<p><a href="https://www.canva.com/design/DAFO-ekZHlo/D2w3FqEqGE1U3NpO_ww3yg/view?utm_content=DAFO-ekZHlo&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Design only - Mobile <i class="fa-solid fa-angle-right"></i></a></p><hr>
+					<p><a href="https://www.canva.com/design/DAFOG_laNkA/ncHQ5GY4I2RYnAv-Npeqkg/view?utm_content=DAFOG_laNkA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Design only - Desktop <i class="fa-solid fa-angle-right"></i></a></p>
 				</div>
 			</div>
 		</div>	
@@ -56,8 +56,8 @@
 				<h3>Tiers of Joy</h3>
 				<p class="descrip">A design/layout project for a community center with welcoming tones.</p>
 				<div class="links">
-					<p><a href="https://www.canva.com/design/DAFO9s0jYXo/kHHuKMEI0LbTBOtZczJO8w/view?utm_content=DAFO9s0jYXo&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Design only - Mobile <i class="fa-solid fa-angle-right"></i></a></p><hr>
-					<p><a href="https://www.canva.com/design/DAFNlfiKAww/EyW-E8pvSOxybnt6fqHqig/view?utm_content=DAFNlfiKAww&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Design only - Desktop <i class="fa-solid fa-angle-right"></i></a></p>
+					<p><a href="https://www.canva.com/design/DAFO9s0jYXo/kHHuKMEI0LbTBOtZczJO8w/view?utm_content=DAFO9s0jYXo&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Design only - Mobile <i class="fa-solid fa-angle-right"></i></a></p><hr>
+					<p><a href="https://www.canva.com/design/DAFNlfiKAww/EyW-E8pvSOxybnt6fqHqig/view?utm_content=DAFNlfiKAww&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Design only - Desktop <i class="fa-solid fa-angle-right"></i></a></p>
 				</div>
 			</div>
 		</div>	
@@ -67,8 +67,8 @@
 				<h3>Alexander Cybersecurity</h3>
 				<p class="descrip">A design/layout project for a web developer with elegant tones.</p>
 				<div class="links">
-					<p><a href="https://www.canva.com/design/DAFPDGWIfiM/jNa2nCydI3rCWbtgw_fesw/view?utm_content=DAFPDGWIfiM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Design only - Mobile <i class="fa-solid fa-angle-right"></i></a></p><hr>
-					<p><a href="https://www.canva.com/design/DAFNy5EVlMo/vm9D24dQiD7MWhHdlXUnjA/view?utm_content=DAFNy5EVlMo&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Design only - Desktop <i class="fa-solid fa-angle-right"></i></a></p>
+					<p><a href="https://www.canva.com/design/DAFPDGWIfiM/jNa2nCydI3rCWbtgw_fesw/view?utm_content=DAFPDGWIfiM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Design only - Mobile <i class="fa-solid fa-angle-right"></i></a></p><hr>
+					<p><a href="https://www.canva.com/design/DAFNy5EVlMo/vm9D24dQiD7MWhHdlXUnjA/view?utm_content=DAFNy5EVlMo&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Design only - Desktop <i class="fa-solid fa-angle-right"></i></a></p>
 				</div>
 			</div>
 		</div>
@@ -78,8 +78,8 @@
 				<h3>New World Cruises</h3>
 				<p class="descrip">A design/layout project for a cruise line with serious tones.</p>
 				<div class="links">
-					<p><a href="https://www.canva.com/design/DAFPDuBNq-c/0DqdLoHQtRuISgUQmVyJkA/view?utm_content=DAFPDuBNq-c&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Design only - Mobile <i class="fa-solid fa-angle-right"></i></a></p><hr>
-					<p><a href="https://www.canva.com/design/DAFN7qtn5iA/SwE91neCamiGq4v3Yvphbg/view?utm_content=DAFN7qtn5iA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Design only - Desktop <i class="fa-solid fa-angle-right"></i></a></p>
+					<p><a href="https://www.canva.com/design/DAFPDuBNq-c/0DqdLoHQtRuISgUQmVyJkA/view?utm_content=DAFPDuBNq-c&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Design only - Mobile <i class="fa-solid fa-angle-right"></i></a></p><hr>
+					<p><a href="https://www.canva.com/design/DAFN7qtn5iA/SwE91neCamiGq4v3Yvphbg/view?utm_content=DAFN7qtn5iA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Design only - Desktop <i class="fa-solid fa-angle-right"></i></a></p>
 				</div>
 			</div>
 		</div>	
@@ -89,7 +89,7 @@
 				<h3>Plump&Plush</h3>
 				<p class="descrip"> A quick practice in collapsing menus, and hover navigation in the images.</p>
 				<div class="links">
-					<p><a href="https://kaidawnborn.github.io/plump-plush/" target="_blank">HTML/CSS - Responsive <i class="fa-solid fa-angle-right"></i></a></p><hr>
+					<p><a href="https://kaidawnborn.github.io/plump-plush/">HTML/CSS - Responsive <i class="fa-solid fa-angle-right"></i></a></p><hr>
 					<p>(No second design)</p>
 				</div>
 			</div>
