--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="landing-text">
 			<h1>I'm Nicole Taylor.</h1>
 			<p>I'm a web designer. I built this!<br>
-			<a href="about.html" target="_self"> Check me out</a>&nbsp&nbsp&nbsp<i class="fa-solid fa-arrow-right"></i>
+			<a href="about.html"> Check me out</a>&nbsp&nbsp&nbsp<i class="fa-solid fa-arrow-right"></i>
 			</p>
 		</div>
 	</body>
