--- a/logos.html
+++ b/logos.html
@@ -22,8 +22,8 @@
 	<body>
 		<h1>Nicole's Logo Projects</h1>
 		<ul>
-			<li><a href="#" target="_blank">Logos</a></li>
-			<li><a href="design.html" target="_blank">Web Design</a></li>
+			<li><a href="#">Logos</a></li>
+			<li><a href="design.html">Web Design</a></li>
 		</ul>
 		<div class="info">
 			<p>These logos are all SVGs, hand-created by me. You can hover over each one to see a variant.</p>
